:bug: fixed z-index so confirmation is above menu

--- a/app/utils/components/style/confirmDelete.scss
+++ b/app/utils/components/style/confirmDelete.scss
@@ -11,7 +11,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 1000;
+  z-index: 200;
 
   .confirm-delete {
     display: flex;
