--- a/app/utils/components/style/hamburgerMenu.scss
+++ b/app/utils/components/style/hamburgerMenu.scss
@@ -5,7 +5,7 @@
   position: fixed;
   left: 0;
   top: 0;
-  z-index: 10000;
+  z-index: 100;
 
   &.open {
     background-color: $alert-box-background-grey;
@@ -140,7 +140,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 10000;
+    z-index: 100;
 
     transition: ease-in-out 0.5s;
 
